src/css/io.css
.container_io {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    max-width: 130rem;
    padding: 0 3rem;
    margin: auto;

    &[data-layout="auto"] {
        flex-direction: row;
    }

    &[data-layout="row"] {
        flex-direction: row;
    }

    &[data-layout="column"] {
        flex-direction: column;
    }

    &[data-layout="column"] textarea.input,
    &[data-layout="column"] textarea.output {
        height: 40rem;
    }
}

.container_input,
.container_output {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    width: 100%;
}

.container_header-input,
.container_header-output {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 2rem;
}

textarea.input,
textarea.output {
    width: 100%;
    height: 47rem;
    resize: none;
    padding: 0.5rem;
}



@media (max-width: 1200px) {
    .container_io[data-layout="auto"] {
        flex-direction: column;

        textarea.input,
        textarea.output {
            height: 40rem;
        }
    }
}

